media queries para tablet y smartphone en index y tienda, pseudoclases en header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="./assets/img/whatsapp.png" alt="Icono de Whatsapp"class="icon"></a></li>
                 </ul>
             </div>
-            <img src="./assets/img/patitasfooter.png" alt="Logo Patitas Pet Shop">
+            <img src="./assets/img/patitasfooter.png" alt="Logo Patitas Pet Shop" class="logo">
             <span>PatitasCo ® Todos los derechos reservados</span>
         </footer>
     </div>
