--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
         <li> <a href="tienda.html">Tienda</a> </li>
         <li> <a href="contacto.html">Contacto</a> </li>
         <li> <a href="nosotros.html">Nosotros</a> </li>
-        <li><a href="login.html">login</a></li>
+        <li><a href="login.html">Login</a></li>
     </ul>
     <!-- TODOS LOS ANTERIORES SON ENLACES RELATIVOS -->
     </header>
@@ -47,7 +47,7 @@
                 <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../assets/img/whatsapp.png" alt="Icono de Whatsapp" class="icon"></a></li>
             </ul>
         </div>
-        <img src="../assets/img/patitasfooter.png" alt="Logo Patitas Pet Shop">
+        <img src="../assets/img/patitasfooter.png" alt="Logo Patitas Pet Shop" class="logo">
         <span>PatitasCo ® Todos los derechos reservados</span>
     </footer>
 </body>
