--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -13,10 +13,10 @@
     <div><h1>Tienda</h1></div>
     <ul>
         <li> <a href="../index.html">Inicio</a> </li>
-        <li> <a href="./pages/tienda.html">Tienda</a> </li>
+        <li> <a href="tienda.html">Tienda</a> </li>
         <li> <a href="contacto.html">Contacto</a> </li>
         <li> <a href="nosotros.html">Nosotros</a> </li>
-        <li><a href="login.html">login</a></li>
+        <li><a href="login.html">Login</a></li>
     </ul>
     </header>
     <section>
@@ -79,7 +79,7 @@
                 <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../assets/img/whatsapp.png" alt="Icono de Whatsapp" class="icon"></a></li>
             </ul>
         </div>
-        <img src="../assets/img/patitasfooter.png" alt="Logo Patitas Pet Shop">
+        <img src="../assets/img/patitasfooter.png" alt="Logo Patitas Pet Shop" class="logo">
         <span>PatitasCo ® Todos los derechos reservados</span>
     </footer>
 </body>
