--- a/pages/login.html
+++ b/pages/login.html
@@ -23,8 +23,8 @@
         <form action="get">
             <fieldset>
                 <legend>Iniciá sesión</legend>
-                <label for="nombre">Nombre completo:</label>
-                <input type="text" id="nombre" required>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" required>
                 <label for="contrasena">Contraseña:</label>
                 <input type="password" id="contrasena" required>
                 <a href="">Olvidé mi contraseña</a>
