--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,8 +22,8 @@
     </ul>
     </header>
     <main class="nosotros">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ad est quis tempora sint id, fugit, iste temporibus, rerum sed eaque harum saepe a quos veritatis! Officiis, placeat! Ullam, assumenda.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde quia, voluptates ut laborum quisquam earum animi architecto placeat. Quae omnis distinctio, labore animi officiis eveniet quidem quas modi a deleniti!</p>
+        <p>Patitas Pet Shop es un negocio familiar iniciado en 2010. Trabajamos todos los dias con mucho amor para llevarles a tus mascotas la mejor calidad de productos!</p>
+        <p>Para recibir tus compras en tu domicilio te recomendamos usar nuestros envíos!! Siempre se pueden coordinar otras formas de envío o bien, podés venir a retirarlo y tentarte con nuestro Showroom en la parte mas linda de Palermo!</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26280.19209487132!2d-58.42703525668693!3d-34.57825897517083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57835e44c59%3A0x9e74dd4b6cbb6d4!2sEcoparque%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686656537925!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div>
             <img src="../assets/img/location-dot-solid.svg" alt="Ubicacion" class="icon">
