--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content=" NOSOTROS | PATITAS PET SHOP">
+    <meta property="og:site_name" content="Patitas Pet Shop">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Trabajamos con mucho amor desde 2010 para llevarle la mejor calidad a tus mascotas!">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://mir-s3-cdn-cf.behance.net/projects/404/236b7c154992187.634ccf76892de.jpg>
+    <meta name="keywords" content="Alimentos balanceados, Primeras marcas, Petshop, Accesorios, Mascotas, Capital Federal, Envíos a todo el país">
     <title>Nosotros - Patitas PetShop</title>
+    <link rel="shortcut icon" href="../assets/img/iconopestaña.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../scss/style.scss">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
 </head>
 <body>
     <header>
@@ -22,17 +31,18 @@
     </ul>
     </header>
     <main class="nosotros">
-        <p>Patitas Pet Shop es un negocio familiar iniciado en 2010. Trabajamos todos los dias con mucho amor para llevarles a tus mascotas la mejor calidad de productos!</p>
-        <p>Para recibir tus compras en tu domicilio te recomendamos usar nuestros envíos!! Siempre se pueden coordinar otras formas de envío o bien, podés venir a retirarlo y tentarte con nuestro Showroom en la parte mas linda de Palermo!</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26280.19209487132!2d-58.42703525668693!3d-34.57825897517083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57835e44c59%3A0x9e74dd4b6cbb6d4!2sEcoparque%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686656537925!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <div>
-            <img src="../assets/img/location-dot-solid.svg" alt="Ubicacion" class="icon">
-            <p>Av. Sarmiento 2601, C1425, Buenos Aires</p>
-        </div>
-        <div>
-            <img src="../assets/img/mail-icon.svg" alt="email" class="icon">
-            <p>callefalsa123@gmail.com</p>
-        </div>
+        
+            <p> <strong>Patitas Pet Shop</strong> es un negocio familiar iniciado en 2010. Trabajamos todos los dias con mucho amor para llevarles a tus <strong> mascotas</strong> la mejor calidad de productos!</p>
+            <p>Para recibir tus compras en tu <strong> domicilio</strong> te recomendamos usar nuestros envíos!! Siempre se pueden coordinar otras  <strong>formas de envío</strong> o bien, podés venir a retirarlo y tentarte con nuestro <strong> Showroom </strong>en la parte mas linda de <strong> Palermo!</strong></p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26280.19209487132!2d-58.42703525668693!3d-34.57825897517083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57835e44c59%3A0x9e74dd4b6cbb6d4!2sEcoparque%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686656537925!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div>
+                <img src="../assets/img/location-dot-solid.svg" alt="Ubicacion" class="icon">
+                <p>Av. Sarmiento 2601, C1425, Buenos Aires</p>
+            </div>
+            <div>
+                <img src="../assets/img/mail-icon.svg" alt="email" class="icon">
+                <p>callefalsa123@gmail.com</p>
+            </div>
     </main>
     <footer>
         <div>
