--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="TIENDA | PATITAS PET SHOP">
+    <meta property="og:site_name" content="Patitas Pet Shop">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Alimentos balanceados, Primeras marcas, Petshop, Accesorios para mascotas, Mascotas, Palermo, Capital Federal, Envíos a todo el país">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://mir-s3-cdn-cf.behance.net/projects/404/236b7c154992187.634ccf76892de.jpg>
+    <meta name="keywords" content="Alimentos balanceados, Primeras marcas, Petshop, Accesorios, Mascotas, Capital Federal, Envíos a todo el país">
     <title>Tienda - Patitas PetShop</title>
+    <link rel="shortcut icon" href="../assets/img/iconopestaña.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../scss/style.scss">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
 </head>
 <body>
     <header>
