--- a/index.html
+++ b/index.html
@@ -34,46 +34,44 @@
         </header>
         
         <main class="index_main">
-            <div>
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="./assets/img/grupo-animales-lindos-sobre-fondo-blanco.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>First slide label</h5>
-                          <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/img/lindo-mascota-collage-aislado.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Second slide label</h5>
-                          <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/img/perro.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Third slide label</h5>
-                          <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+          <div id="carouselWithCaptions" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/img/perro.jpg" class="d-block w-100" alt="Slide 1">
+                <div class="carousel-caption d-none d-sm-block">
+                  <h5>EN LA TIENDA</h5>
+                  <p>Nuevos ingresos todas las semanas.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/perro.jpg" class="d-block w-100" alt="Slide 2">
+                <div class="carousel-caption d-none d-sm-block">
+                  <h5>SOBRE NOSOTROS</h5>
+                  <p>Conocé nuestra ubicación y métodos de envío.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/perro.jpg" class="d-block w-100" alt="Slide 3">
+                <div class="carousel-caption d-none d-sm-block">
+                  <h5>CONTACTO</h5>
+                  <p>Comunicate con nosotros de lunes a viernes de 08 a 20 hs.</p>
+                </div>
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselWithCaptions" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselWithCaptions" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </a>
+          </div>
         </main>
         <footer>
             <div>
