--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -29,12 +29,11 @@
         <li> <a href="login.html">Login</a> </li>
     </ul>
     </header>
-    <main class="nosotros">
-            <div class="sobrenosotros">
-            <span> <strong>Patitas Pet Shop</strong> es un negocio familiar iniciado en 2010. Trabajamos todos los dias con mucho amor para llevarles a tus <strong> mascotas</strong> la mejor calidad de productos!</span>
-            <span>Para recibir tus compras en tu <strong> domicilio</strong> te recomendamos usar nuestros envíos!! Siempre se pueden coordinar otras  <strong>formas de envío</strong> o bien, podés venir a retirarlo y tentarte con nuestro <strong> Showroom </strong>en la parte mas linda de <strong> Palermo!</strong></span>
+    <main >
+        <section class="nosotros">
+            <p> <strong>Patitas Pet Shop</strong> es un negocio familiar iniciado en 2010. Trabajamos todos los dias con mucho amor para llevarles a tus <strong> mascotas</strong> la mejor calidad de productos!</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26280.19209487132!2d-58.42703525668693!3d-34.57825897517083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57835e44c59%3A0x9e74dd4b6cbb6d4!2sEcoparque%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686656537925!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+            <p>Para recibir tus compras en tu <strong> domicilio</strong> te recomendamos usar nuestros envíos!! Siempre se pueden coordinar otras  <strong>formas de envío</strong> o bien, podés venir a retirarlo y tentarte con nuestro <strong> Showroom </strong>en la parte mas linda de <strong> Palermo!</strong></p>
             <div>
                 <img src="../assets/img/location-dot-solid.svg" alt="Ubicacion" class="icon">
                 <span>Av. Sarmiento 2601, C1425, Buenos Aires</span>
@@ -43,6 +42,7 @@
                 <img src="../assets/img/mail-icon.svg" alt="email" class="icon">
                 <span>callefalsa123@gmail.com</span>
             </div>
+        </section>
     </main>
     <footer>
         <div>
