reparacion de nosotros y tienda, responsive

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </header>
         
         <main class="index_main">
+          <section class="container">
           <div id="carouselWithCaptions" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
               <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="0" class="active"></li>
@@ -42,7 +43,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/img/perro.jpg" class="d-block w-100" alt="Slide 1">
+                <img src="./assets/img/perroedit.jpg" class="d-block w-100" alt="Slide 1">
                 <div class="carousel-caption d-none d-sm-block">
                   <h5>EN LA TIENDA</h5>
                   <p>Nuevos ingresos todas las semanas.</p>
@@ -72,6 +73,7 @@
               <span class="visually-hidden">Next</span>
             </a>
           </div>
+        </section>
         </main>
         <footer>
             <div>
