--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -40,37 +40,37 @@
     </section>
     <main>
         <section class="section_cards">
-            <div class="card">
+            <div class="carta">
                 <img src="../assets/img/patitoBatman.png" alt="Juguete patito de batman para perros">
                 <h2>Patito de hule Batman para perros</h2>
                 <p>$1600</p>
                 <button class="boton">COMPRAR</button>
             </div>
-            <div class="card">
+            <div class="carta">
                 <img src="../assets/img/rascador.png" alt="Rascador para gatos">
                 <h2>Rascador para gatos</h2>
                 <p>$7900</p>
                 <button class="boton">COMPRAR</button>
             </div>
-            <div class="card">
+            <div class="carta">
                 <img src="../assets/img/mochilaGato.png" alt="Mochila transportadora para gatos">
                 <h2>Mochila transportadora para gatos</h2>
                 <p>$14500</p>
                 <button class="boton">COMPRAR</button>
             </div>
-            <div class="card">
+            <div class="carta">
                 <img src="../assets/img/patitoBatman.png" alt="Juguete patito de batman para perros">
                 <h2>Patito de hule Batman para perros</h2>
                 <p>$1600</p>
                 <button class="boton">COMPRAR</button>
             </div>
-            <div class="card">
+            <div class="carta">
                 <img src="../assets/img/rascador.png" alt="Rascador para gatos">
                 <h2>Rascador para gatos</h2>
                 <p>$7900</p>
                 <button class="boton">COMPRAR</button>
             </div>
-            <div class="card">
+            <div class="carta">
                 <img src="../assets/img/mochilaGato.png" alt="Mochila transportadora para gatos">
                 <h2>Mochila transportadora para gatos</h2>
                 <p>$14500</p>
