--- a/index.html
+++ b/index.html
@@ -34,46 +34,11 @@
         </header>
         
         <main class="index_main">
-          <section class="container">
-          <div id="carouselWithCaptions" class="carousel slide" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="0" class="active"></li>
-              <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="1"></li>
-              <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/img/perroedit.jpg" class="d-block w-100" alt="Slide 1">
-                <div class="carousel-caption d-none d-sm-block">
-                  <h5>EN LA TIENDA</h5>
-                  <p>Nuevos ingresos todas las semanas.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/perro.jpg" class="d-block w-100" alt="Slide 2">
-                <div class="carousel-caption d-none d-sm-block">
-                  <h5>SOBRE NOSOTROS</h5>
-                  <p>Conocé nuestra ubicación y métodos de envío.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/perro.jpg" class="d-block w-100" alt="Slide 3">
-                <div class="carousel-caption d-none d-sm-block">
-                  <h5>CONTACTO</h5>
-                  <p>Comunicate con nosotros de lunes a viernes de 08 a 20 hs.</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselWithCaptions" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselWithCaptions" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
-          </div>
-        </section>
+          <section>
+            <div><a href="./pages/tienda.html">Visitá nuestra tienda</a></div>
+            <div><a href="./pages/contacto.html">Contactate con nosotros</a></div>
+            <div><a href="./pages/nosotros.html">Conocé nuestra ubicación y formas de envío</a></div>
+          </section>
         </main>
         <footer>
             <div>
