modificaciones a nav y gititgnore

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="./assets/img/Patitas 1.png" alt="Patitas Pet Shop">
             <div><h1>Inicio</h1></div>
             <nav>
-            <ul>
+            <ul class="navbar">
                 <li> <a href="./index.html">Inicio</a> </li>
                 <li><a href="./pages/tienda.html">Tienda</a></li>
                 <li> <a href="./pages/contacto.html">Contacto</a> </li>
@@ -34,11 +34,11 @@
         </header>
         
         <main class="index_main">
-          <section>
-            <div><a href="./pages/tienda.html">Visitá nuestra tienda</a></div>
-            <div><a href="./pages/contacto.html">Contactate con nosotros</a></div>
-            <div><a href="./pages/nosotros.html">Conocé nuestra ubicación y formas de envío</a></div>
-          </section>
+            <section>
+                <div><a href="./pages/tienda.html">Visitá nuestra tienda</a></div>
+                <div><a href="./pages/contacto.html">Contactate con nosotros</a></div>
+                <div><a href="./pages/nosotros.html">Conocé nuestra ubicación y formas de envío</a></div>
+            </section>
         </main>
         <footer>
             <div>
