--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,7 @@
     <header>
     <img src="../assets/img/Patitas 1.png" alt="Logo Patitas Pet Shop">
     <div><h1>Sobre Nosotros</h1></div>
-    <ul>
+    <ul class="navbar">
         <li> <a href="../index.html">Inicio</a> </li>
         <li> <a href="tienda.html">Tienda</a> </li>
         <li> <a href="contacto.html">Contacto</a> </li>
